// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSheets > generates a combinator 1`] = `
[
  {
    "className": "j1dqz",
    "css": ".j1dqz { color: red; }",
  },
  {
    "className": "jiy1a",
    "css": ".jiy1a> span { color: purple; }",
  },
]
`;

exports[`generateSheets > generates a media query 1`] = `
[
  {
    "className": "j15vw",
    "css": "@media screen and (width: 600px){ .j15vw { color: plum; } }",
  },
]
`;

exports[`generateSheets > generates a nested pseudo selector 1`] = `
[
  {
    "className": "j1dqz",
    "css": ".j1dqz { color: red; }",
  },
  {
    "className": "jm8xk",
    "css": ".jm8xk:hover { color: blue; }",
  },
  {
    "className": "je9tx",
    "css": ".je9tx:hover:active { background-color: pink; }",
  },
]
`;

exports[`generateSheets > generates a pseudo selector 1`] = `
[
  {
    "className": "j1dqz",
    "css": ".j1dqz { color: red; }",
  },
  {
    "className": "jm8xk",
    "css": ".jm8xk:hover { color: blue; }",
  },
]
`;

exports[`generateSheets > generates an attribute selector 1`] = `
[
  {
    "className": "j1dqz",
    "css": ".j1dqz { color: red; }",
  },
  {
    "className": "j12qb",
    "css": ".j12qb[data-foo="bar"] { color: yellow; }",
  },
]
`;

exports[`generateSheets > generates an selector in a media query 1`] = `
[
  {
    "className": "ji344",
    "css": "@media screen and (width: 600px){ .ji344:hover { color: teal; } }",
  },
]
`;

exports[`generateSheets > generates an selector in a media query 2`] = `
[
  {
    "className": "j1msw",
    "css": "@media screen and (width: 600px){ .j1msw:hover { color: tomato; } }",
  },
]
`;

exports[`generateSheets > generates camelCase property as kebab-case key 1`] = `
[
  {
    "className": "jnqp7",
    "css": ".jnqp7 { background-color: black; }",
  },
]
`;

exports[`generateSheets > generates custom property reference 1`] = `
[
  {
    "className": "j1ovh",
    "css": ".j1ovh { color: var(--j-colors-red); }",
  },
]
`;

exports[`generateSheets > generates custom property reference with kebab-case transformation 1`] = `
[
  {
    "className": "j10nw",
    "css": ".j10nw { color: var(--j-colors-light-gray); }",
  },
]
`;

exports[`generateSheets > generates multiple properties 1`] = `
[
  {
    "className": "j1pim",
    "css": ".j1pim { border: 1px solid red; }",
  },
  {
    "className": "jr2ve",
    "css": ".jr2ve { border-radius: 4px; }",
  },
]
`;

exports[`generateSheets > generates simple single property 1`] = `
[
  {
    "className": "j1dqz",
    "css": ".j1dqz { color: red; }",
  },
]
`;

exports[`generateThemeSheets > generates a token which refer the other token 1`] = `":root { --j-colors-gray: #666666; --j-colors-primary: var(--j-colors-gray); }"`;

exports[`generateThemeSheets > generates multiple tokens 1`] = `":root { --j-colors-gray-200: #eeeeee; --j-colors-gray-600: #666666; --j-spaces-sm: 4px; --j-sizes-lg: 120px; --j-font-sizes-md: 16px; --j-radii-xs: 2px; }"`;

exports[`generateThemeSheets > generates single token 1`] = `":root { --j-colors-light-gray: #666666; }"`;
